--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 </head>
 <body>
    <h1>A Jornada da inovação e Sustentabilidade no mundo esportivo </h1> 
+   <img src="img1.jpeg"/>
    <h2>A melhor marca</h2>
    <p> Da Deusa Grega a`liderança global : A Nike, é umna empresa entadunidense de calçados, roupas e acessórios fundada em 1972 por Bill Bowerman e Philip Knight. 
     Em 2016, foi considerada a marca de roupas mais valiosa do mundo, segundo o ranking BrandZ da consultoria Millward Brown avaliada em R$ 164 bilhões oferece uma ampla gama de opções de produtos para atender às necessidades de atletas e entusiastasdo esporte.
