--- a/index.html
+++ b/index.html
@@ -4,6 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>nike</title>
+    <style>
+        h1{
+            font-size: 50pt;
+            font-family: ;
+            text-align: center;
+            color: rebeccapurple;
+        }
+    </style>
 </head>
 <body>
    <h1>A Jornada da inovação e Sustentabilidade no mundo esportivo </h1> 
@@ -13,6 +21,6 @@
     Em 2016, foi considerada a marca de roupas mais valiosa do mundo, segundo o ranking BrandZ da consultoria Millward Brown avaliada em R$ 164 bilhões oferece uma ampla gama de opções de produtos para atender às necessidades de atletas e entusiastasdo esporte.
     <p>Seus produtos incluem calçados, roupas e acessórios que combinam tecnologia avançada e design inovador para melhorar o desempenho e conforto. Além disso, a nike disponibiliza linhas específicas para diferentes modalidades esportivas, como corrida, futebol, basquete, e treino, bem como opções casuais para uso diário. Com um compromisso contínuo com sustentabilidade, a empresa também desenvolve produtos feitos com mateiras reciclados e processos de fabricação mais ecológico.
     </p>
-    
+
 </body>
 </html>
