--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <style>
         h1{
             font-size: 50pt;
-            font-family:  Arial;
+            font-family:  Jazz LET;
             text-align: center;
             color: rebeccapurple;
         }
