--- a/index.html
+++ b/index.html
@@ -7,9 +7,13 @@
     <style>
         h1{
             font-size: 50pt;
-            font-family:  fantasy;
+            font-family:  ;
             text-align: center;
             color: rebeccapurple;
+        }
+        img{
+            width: 800px;
+            height: 800px;
         }
     </style>
 </head>
