--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
             color: rebeccapurple;
         }
         img{
-            width: 800px;
-            height: 800px;
+            width: 1000px;
+            height: 600;
         }
     </style>
 </head>
